# tiptap-rs

./: Cargo.toml  Makefile.toml  README.md
examples/main/: Cargo.toml  index.html
examples/main/src/: main.rs  start.rs
src/: bridge.rs  extensions.rs  lib.rs
src/examples/main/: Cargo.toml
src/extensions/: bold.rs  bullet_list.rs  heading.rs  italic.rs  ordered_list.rs  paragraph.rs  strike.rs
