[package]
name = "tiptap-rs"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/dsplce-co/tiptap-rs"
description = "WASM bindings for Tiptap"
license = "MIT OR Apache-2.0"

[dependencies]
affix = "0.1.2"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
strum = "0.27.2"
strum_macros = "0.27.2"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["Window", "Document", "HtmlElement", "Text"] }
