[package]
name = "tiptap-rs-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tiptap-rs = { path = "../.." }
affix = "0.1.2"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
strum = "0.27.2"
strum_macros = "0.27.2"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["Window", "Document", "HtmlElement", "Text"] }
